--- a/templates/gestao_trafego.html
+++ b/templates/gestao_trafego.html
@@ -11,12 +11,12 @@
 		<!-- Page Title
 		============================================= -->
 
-		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(254,150,3,0.5), #39384D), url('{% static 'demos/seo/images/services/experience-title.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(73,80,87,0.5), #39384D), url('{% static 'demos/seo/images/services/trafego-top.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 			<div id="particles-line"></div>
 
 			<div class="container clearfix mt-4">
 				<div class="badge rounded-pill border border-light text-light">Serviços</div>
-				<h1>Gestão de Tráfego pago</h1>
+				<h1>Gestão de Tráfego</h1>
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
 					<li class="breadcrumb-item"><a href="#">Serviços</a></li>
@@ -36,14 +36,14 @@
 					<div class="row align-items-center">
 						<div class="col-lg-6">
 							<div class="badge rounded-pill badge-default">Tráfego Pago</div>
-							<h2 class="display-4 fw-bold">Gestão de tráfego pago e otimização de campanhas.</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia vitae mollitia dignissimos ab qui aspernatur.</p>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt laborum, molestiae eum odit illo pariatur. Sapiente deserunt optio dignissimos maiores pariatur, expedita voluptate quibusdam distinctio beatae.</p>
+							<h2 class="display-4 fw-bold">Gestão de tráfego e otimização de campanhas pagas.</h2>
+							<p>Utilizando as maiores inteligências de dados de hoje em dia (Google e Facebook) conseguimos atingir com mais eficiência os clientes certos nos momentos certos.</p>
+							<p>Isso faz com que os leads cheguem muito mais qualificados para a sua agência.</p>
 							<a href="#" class="button button-rounded button-large nott ls0">Saiba Mais</a>
 							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Entre em Contato</a>
 						</div>
 						<div class="col-lg-6 mt-4 mt-lg-0">
-							<img src="{% static 'demos/seo/images/services/content_marketing.svg' %}" alt="Image">
+							<img src="{% static 'demos/seo/images/services/content_marketing-pb.svg' %}" alt="Image">
 						</div>
 					</div>
 
