--- a/templates/google_meunegocio.html
+++ b/templates/google_meunegocio.html
@@ -11,16 +11,16 @@
 		<!-- Page Title
 		============================================= -->
 
-		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(73,80,87,0.5), #39384D), url('{% static 'demos/seo/images/services/content_marketing-title.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(73,80,87,0.5), #39384D), url('{% static 'demos/seo/images/services/google-top.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 			<div id="particles-line"></div>
 
 			<div class="container clearfix mt-4">
 				<div class="badge rounded-pill border border-light text-light">Serviços</div>
-				<h1>Criativos</h1>
+				<h1>Google Meu Negócio</h1>
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
 					<li class="breadcrumb-item"><a href="#">Serviços</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Criativos</li>
+					<li class="breadcrumb-item active" aria-current="page">Google Meu Negócio</li>
 				</ol>
 			</div>
 
@@ -35,15 +35,14 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-6">
-							<div class="badge rounded-pill badge-default">Criativos</div>
-							<h2 class="display-4 fw-bold">Criação em marketing.</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia vitae mollitia dignissimos ab qui aspernatur.</p>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt laborum, molestiae eum odit illo pariatur. Sapiente deserunt optio dignissimos maiores pariatur, expedita voluptate quibusdam distinctio beatae.</p>
-							<a href="{% url 'sobre' %}" class="button button-rounded button-large nott ls0">Get Started</a>
-							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Contact Us</a>
+							<div class="badge rounded-pill badge-default">Google Meu Negócio</div>
+							<h2 class="display-4 fw-bold">Google Meu Negócio.</h2>
+							<p>Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes.</p>
+							<a href="{% url 'sobre' %}" class="button button-rounded button-large nott ls0">Saiba Mais</a>
+							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Entre em Contato</a>
 						</div>
 						<div class="col-lg-6 mt-4 mt-lg-0">
-							<img src="{% static 'demos/seo/images/services/criativos.svg' %}" alt="Image">
+							<img src="{% static 'demos/seo/images/services/experience-pb.svg' %}" alt="Image">
 						</div>
 					</div>
 
