--- a/templates/identidade_visual.html
+++ b/templates/identidade_visual.html
@@ -11,7 +11,7 @@
 		<!-- Page Title
 		============================================= -->
 
-		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(254,150,3,0.5), #39384D), url('{% static 'demos/seo/images/services/adwords-title.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(73,80,87,0.5), #39384D), url('{% static 'demos/seo/images/services/identidade-top.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 			<div id="particles-line"></div>
 
 			<div class="container clearfix mt-4">
@@ -36,14 +36,13 @@
 					<div class="row align-items-center">
 						<div class="col-lg-6">
 							<div class="badge rounded-pill badge-default">Serviços</div>
-							<h2 class="display-4 fw-bold">Identidade Visual.</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia vitae mollitia dignissimos ab qui aspernatur.</p>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt laborum, molestiae eum odit illo pariatur. Sapiente deserunt optio dignissimos maiores pariatur, expedita voluptate quibusdam distinctio beatae.</p>
+							<h2 class="display-4 fw-bold">Identidade Visual & Logomarca</h2>
+							<p>Criamos do zero uma identidade visual que converse com toda a estrutura digital da sua agência.</p>
 							<a href="{% url 'sobre' %}" class="button button-rounded button-large nott ls0">Saiba Mais</a>
 							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Entre em Contato</a>
 						</div>
 						<div class="col-lg-6 mt-4 mt-lg-0">
-							<img src="{% static 'demos/seo/images/services/adwords.svg' %}" alt="Image">
+							<img src="{% static 'demos/seo/images/services/criativos-pb.svg' %}" alt="Image">
 						</div>
 					</div>
 
