--- a/templates/otimizacao_seo.html
+++ b/templates/otimizacao_seo.html
@@ -5,22 +5,22 @@
 	<!-- Document Wrapper
 	============================================= -->
 	<div id="wrapper" class="clearfix">
-
+        
         {% include 'partials/menu.html' %}
 
 		<!-- Page Title
 		============================================= -->
 
-		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(73,80,87,0.5), #39384D), url('{% static 'demos/seo/images/services/content_marketing-title.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(73,80,87,0.5), #39384D), url('{% static 'demos/seo/images/services/seo-top.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 			<div id="particles-line"></div>
 
 			<div class="container clearfix mt-4">
 				<div class="badge rounded-pill border border-light text-light">Serviços</div>
-				<h1>Criativos</h1>
+				<h1>Otimização de SEO</h1>
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
 					<li class="breadcrumb-item"><a href="#">Serviços</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Criativos</li>
+					<li class="breadcrumb-item active" aria-current="page">Otimização de SEO</li>
 				</ol>
 			</div>
 
@@ -35,15 +35,15 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-6">
-							<div class="badge rounded-pill badge-default">Criativos</div>
-							<h2 class="display-4 fw-bold">Criação em marketing.</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia vitae mollitia dignissimos ab qui aspernatur.</p>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt laborum, molestiae eum odit illo pariatur. Sapiente deserunt optio dignissimos maiores pariatur, expedita voluptate quibusdam distinctio beatae.</p>
-							<a href="{% url 'sobre' %}" class="button button-rounded button-large nott ls0">Get Started</a>
-							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Contact Us</a>
+							<div class="badge rounded-pill badge-default">SEO</div>
+							<h2 class="display-4 fw-bold">Otimização de SEO.</h2>
+							<p>É o que dizem: a segunda página do Google nem existe.</p>
+							<p>E para evitar isso, fazemos com que o site da sua agência apareça nos primeiros rankings de pesquisa do Google.</p>
+							<a href="#" class="button button-rounded button-large nott ls0">Saiba Mais</a>
+							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Entre em Contato</a>
 						</div>
 						<div class="col-lg-6 mt-4 mt-lg-0">
-							<img src="{% static 'demos/seo/images/services/criativos.svg' %}" alt="Image">
+							<img src="{% static 'demos/seo/images/services/seo-pb.svg' %}" alt="Image">
 						</div>
 					</div>
 
@@ -58,10 +58,10 @@
 						<div class="col-sm-6 col-lg-4">
 							<div class="feature-box">
 								<div class="fbox-icon mb-4">
-									<a href="#"><i class="icon-dollar si-colored si-gplus border-0"></i></a>
+									<a href="#"><i class="icon-google si-colored si-gplus border-0"></i></a>
 								</div>
 								<div class="fbox-content">
-									<h3 class="nott">Increase Profits</h3>
+									<h3 class="nott">Google Analytics</h3>
 									<p>Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
 								</div>
 							</div>
@@ -70,10 +70,10 @@
 						<div class="col-sm-6 col-lg-4">
 							<div class="feature-box">
 								<div class="fbox-icon mb-4">
-									<a href="#"><i class="icon-comments2 bg-dark border-0"></i></a>
+									<a href="#"><i class="icon-line-paper bg-dark border-0"></i></a>
 								</div>
 								<div class="fbox-content">
-									<h3 class="nott">Create a Story</h3>
+									<h3 class="nott">Page Analytics</h3>
 									<p>Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Retina Icons, Fonts &amp; all others graphics are optimized.</p>
 								</div>
 							</div>
@@ -82,10 +82,10 @@
 						<div class="col-sm-6 col-lg-4">
 							<div class="feature-box">
 								<div class="fbox-icon mb-4">
-									<a href="#"><i class="icon-quote-right1 bg-info border-0"></i></a>
+									<a href="#"><i class="icon-dashboard bg-info border-0"></i></a>
 								</div>
 								<div class="fbox-content">
-									<h3 class="nott">Create a Dialogue</h3>
+									<h3 class="nott">Page Speed</h3>
 									<p>Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Retina Icons, Fonts &amp; all others graphics are optimized.</p>
 								</div>
 							</div>
