--- a/templates/partials/mini-contato.html
+++ b/templates/partials/mini-contato.html
@@ -49,7 +49,7 @@
 							</div>
 
 							<div class="col-md-4 mt-5 mt-md-0 center">
-								<a href="https://www.youtube.com/watch?v=xm3YgoEiEDc" data-lightbox="iframe" class="play-icon shadow"><i class="icon-play"></i></a>
+								<!-- <a href="https://www.youtube.com/watch?v=xm3YgoEiEDc" data-lightbox="iframe" class="play-icon shadow"><i class="icon-play"></i></a>-->
 							</div>
 
 						</div>
