--- a/templates/partials/servicos-outros.html
+++ b/templates/partials/servicos-outros.html
@@ -10,7 +10,7 @@
 						</div>
 						<div class="row col-mb-30 align-content-stretch">
 
-							<div class="col-lg-4 col-md-6 d-flex">
+							<!-- <div class="col-lg-4 col-md-6 d-flex">
 								<div class="card">
 									<div class="card-body p-5">
 										<div class="feature-box flex-column">
@@ -31,7 +31,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 
 							<div class="col-lg-4 col-md-6 d-flex">
 								<div class="card">
@@ -42,7 +42,7 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="nott ls0 text-larger">Gestão de Tráfego</h3>
-												<p class="text-smaller">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dolore, voluptates!</p>
+												<p class="text-smaller">Trazemos os clientes mais qualificados para a sua agência</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Facebook Advertising</li>
@@ -61,16 +61,17 @@
 									<div class="card-body p-5">
 										<div class="feature-box flex-column">
 											<div class="fbox-icon mb-3">
-												<img src="{% static 'demos/seo/images/icons/adword.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0">
+												<img src="{% static 'demos/seo/images/icons/analysis.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0">
 											</div>
 											<div class="fbox-content">
-												<h3 class="nott ls0 text-larger">Identidade Visual</h3>
-												<p class="text-smaller">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dolore, voluptates!</p>
+												<h3 class="nott ls0 text-larger">Otimização de SEO</h3>
+												<p class="text-smaller">Fazemos seu site ter mais relevância na página de pesquisa do Google</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> UI/UX Design</li>
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Speed Optimized</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Graphics Banner</li>
 												<li class="text-muted"><i class="icon-check text-smaller color"></i> Advertisement</li>
 											</ul>
 										</div>
@@ -78,7 +79,7 @@
 								</div>
 							</div>
 
-							<div class="col-lg-4 col-md-6 d-flex">
+							<!-- <div class="col-lg-4 col-md-6 d-flex">
 								<div class="card">
 									<div class="card-body p-5">
 										<div class="feature-box flex-column">
@@ -99,7 +100,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 
 							<div class="col-lg-4 col-md-6 d-flex">
 								<div class="card">
@@ -109,8 +110,8 @@
 												<img src="{% static 'demos/seo/images/icons/social.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0">
 											</div>
 											<div class="fbox-content">
-												<h3 class="nott ls0 text-larger">Desenvolvimento WEB</h3>
-												<p class="text-smaller">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dolore, voluptates!</p>
+												<h3 class="nott ls0 text-larger">Criação de Website</h3>
+												<p class="text-smaller">Desenvolvemos utiliando as melhores ferramentas um site moderno e otimizado para responder bem em todos os dispositivos</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
@@ -124,7 +125,52 @@
 								</div>
 							</div>
 
-							<div class="col-lg-4 col-md-6 d-flex">
+							<div class="col-lg-6 col-md-6 d-flex">
+								<div class="card">
+									<div class="card-body p-5">
+										<div class="feature-box flex-column">
+											<div class="fbox-icon mb-3">
+												<img src="{% static 'demos/seo/images/icons/experience.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0">
+											</div>
+											<div class="fbox-content">
+												<h3 class="nott ls0 text-larger">Google Meu Negócio</h3>
+												<p class="text-smaller">Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes</p>
+											</div>
+											<ul class="iconlist ms-3 mt-4 mb-0">
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> UI/UX Design</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Speed Optimized</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Graphics Banner</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Advertisement</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-lg-6 col-md-12 d-flex">
+								<div class="card">
+									<div class="card-body p-5">
+										<div class="feature-box flex-column">
+											<div class="fbox-icon mb-3">
+												<img src="{% static 'demos/seo/images/icons/ads.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0">
+											</div>
+											<div class="fbox-content">
+												<h3 class="nott ls0 text-larger">Identidade Visual & Logomarca</h3>
+												<p class="text-smaller">Entregamos uma identidade visual que condiga com os serviços prestados pela sua agência</p>
+											</div>
+											<ul class="iconlist ms-3 mt-4 mb-0">
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> UI/UX Design</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Speed Optimized</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Advertisement</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- <div class="col-lg-4 col-md-6 d-flex">
 								<div class="card">
 									<div class="card-body p-5">
 										<div class="feature-box flex-column">
@@ -145,7 +191,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 
 						</div>
 					</div>
