--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 			<div class="content-wrap pt-0">
 
 				<!-- Client Carousel
-				============================================= -->
+				=============================================
 				<div class="section bg-transparent m-0 border-bottom py-5">
 					<div class="container">
 						<div id="oc-clients" class="owl-carousel image-carousel carousel-widget" data-margin="100" data-loop="true" data-autoplay="5000" data-nav="false" data-pagi="false" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="5" data-items-xl="6">
@@ -27,7 +27,7 @@
 							<div class="oc-item"><a href="#"><img src="{% static 'demos/business/images/clients/amazon.svg' %}" alt="Brands"></a></div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<!-- Features
 				============================================= -->
@@ -42,7 +42,7 @@
 
 							<div class="col-lg-4 col-sm-6">
 
-								<div class="feature-box flex-md-row-reverse text-md-end border-0">
+								<!-- <div class="feature-box flex-md-row-reverse text-md-end border-0">
 									<div class="fbox-icon">
 										<a href="#"><img src="{% static 'demos/seo/images/icons/analysis.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
 									</div>
@@ -50,24 +50,34 @@
 										<h3 class="nott ls0">Análise Estratégica</h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dolore, voluptates!</p>
 									</div>
-								</div>
+								</div> -->
 
-								<div class="feature-box flex-md-row-reverse text-md-end border-0 mt-5">
+								<div class="feature-box flex-md-row-reverse text-md-end border-0">
 									<div class="fbox-icon">
 										<a href="#"><img src="{% static 'demos/seo/images/icons/seo.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
 									</div>
 									<div class="fbox-content">
 										<h3 class="nott ls0">Gestão de Tráfego</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, provident.</p>
+										<p>Trazemos os clientes mais qualificados para a sua agência</p>
 									</div>
 								</div>
 
 								<div class="feature-box flex-md-row-reverse text-md-end border-0 mt-5">
 									<div class="fbox-icon">
-										<a href="#"><img src="{% static 'demos/seo/images/icons/adword.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
+										<a href="#"><img src="{% static 'demos/seo/images/icons/analysis.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
 									</div>
 									<div class="fbox-content">
-										<h3 class="nott ls0">Identidade Visual</h3>
+										<h3 class="nott ls0">Otimização de SEO</h3>
+										<p>Fazemos seu site ter mais relevância na página de pesquisa do Google</p>
+									</div>
+								</div>
+
+								<div class="feature-box flex-md-row-reverse text-md-end border-0 mt-5">
+									<div class="fbox-icon">
+										<a href="#"><img src="{% static 'demos/seo/images/icons/social.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
+									</div>
+									<div class="fbox-content">
+										<h3 class="nott ls0">Desenvolvimento Web</h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, ipsa!</p>
 									</div>
 								</div>
@@ -80,7 +90,7 @@
 
 							<div class="col-lg-4 col-sm-6">
 
-								<div class="feature-box border-0">
+								<!-- <div class="feature-box border-0">
 									<div class="fbox-icon">
 										<a href="#"><img src="{% static 'demos/seo/images/icons/experience.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
 									</div>
@@ -88,19 +98,29 @@
 										<h3 class="nott ls0">Criativos</h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dolore, voluptates!</p>
 									</div>
+								</div> -->
+
+								<div class="feature-box border-0">
+									<div class="fbox-icon">
+										<a href="#"><img src="{% static 'demos/seo/images/icons/experience.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
+									</div>
+									<div class="fbox-content">
+										<h3 class="nott ls0">Google Meu Negócio</h3>
+										<p>Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes</p>
+									</div>
 								</div>
 
 								<div class="feature-box border-0 mt-5">
 									<div class="fbox-icon">
-										<a href="#"><img src="{% static 'demos/seo/images/icons/social.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
+										<a href="#"><img src="{% static 'demos/seo/images/icons/ads.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
 									</div>
 									<div class="fbox-content">
-										<h3 class="nott ls0">Desenvolvimento Web</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, ipsa!</p>
+										<h3 class="nott ls0">Identidade Visual & Logomarca</h3>
+										<p>Entregamos uma identidade visual que condiga com os serviços prestados pela sua agência</p>
 									</div>
 								</div>
 
-								<div class="feature-box border-0 mt-5">
+								<!-- <div class="feature-box border-0 mt-5">
 									<div class="fbox-icon">
 										<a href="#"><img src="{% static 'demos/seo/images/icons/content_marketing.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
 									</div>
@@ -108,7 +128,7 @@
 										<h3 class="nott ls0">Posts</h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, provident.</p>
 									</div>
-								</div>
+								</div> -->
 
 							</div>
 
@@ -412,6 +432,61 @@
 				</div>
 
                 {% include 'partials/testemunhos.html' %}
+
+				<div class="section bg-transparent mb-0 pb-0 border-0">
+					<div class="container bg-color-light border-0 rounded-3 p-3 p-md-4" style="background-color: rgba(173, 181, 189, 0.2);">
+						<div class="heading-block border-bottom-0 center mb-0">
+							<div class="badge rounded-pill badge-default">Etapas</div>
+						</div>
+						<div class="row justify-content-around">
+							<div class="col-lg-3 col-md-4 mt-5">
+								<div class="feature-text" style="display: flex; align-items: center; border-bottom: 1px dashed rgba(0, 0, 0, 0.15); padding-bottom: 10px;">
+									<div class="fbox-text color" style="font-size: 58px; line-height: 1; font-weight: 700;">1ª</div>
+									<h3 style="font-size: 22px; line-height: 1.3; margin-bottom: 0; margin-left: 15px; font-weight: 800;">Etapa</h3>
+								</div>
+								<p>Entendimento detalhado do funcionamento da sua agência.</p>
+							</div>
+							<div class="col-lg-3 col-md-4 mt-5">
+								<div class="feature-text" style="display: flex; align-items: center; border-bottom: 1px dashed rgba(0, 0, 0, 0.15); padding-bottom: 10px;">
+									<div class="fbox-text color" style="font-size: 58px; line-height: 1; font-weight: 700;">2ª</div>
+									<h3 style="font-size: 22px; line-height: 1.3; margin-bottom: 0; margin-left: 15px; font-weight: 800;">Etapa</h3>
+								</div>
+								<p>Análise de métricas já existentes e particularidades da sua agência.</p>
+							</div>
+							<div class="col-lg-3 col-md-4 mt-5">
+								<div class="feature-text" style="display: flex; align-items: center; border-bottom: 1px dashed rgba(0, 0, 0, 0.15); padding-bottom: 10px;">
+									<div class="fbox-text color" style="font-size: 58px; line-height: 1; font-weight: 700;">3ª</div>
+									<h3 style="font-size: 22px; line-height: 1.3; margin-bottom: 0; margin-left: 15px; font-weight: 800;">Etapa</h3>
+								</div>
+								<p>Estruturação de estratégias e soluções para os processos que precisam de melhorias.</p>
+							</div>
+						</div>
+						<div class="row justify-content-around">
+							<div class="col-lg-3 col-md-4 mt-5">
+								<div class="feature-text" style="display: flex; align-items: center; border-bottom: 1px dashed rgba(0, 0, 0, 0.15); padding-bottom: 10px;">
+									<div class="fbox-text color" style="font-size: 58px; line-height: 1; font-weight: 700;">4ª</div>
+									<h3 style="font-size: 22px; line-height: 1.3; margin-bottom: 0; margin-left: 15px; font-weight: 800;">Etapa</h3>
+								</div>
+								<p>Implementação das propostas.</p>
+							</div>
+							<div class="col-lg-3 col-md-4 mt-5">
+								<div class="feature-text" style="display: flex; align-items: center; border-bottom: 1px dashed rgba(0, 0, 0, 0.15); padding-bottom: 10px;">
+									<div class="fbox-text color" style="font-size: 58px; line-height: 1; font-weight: 700;">5ª</div>
+									<h3 style="font-size: 22px; line-height: 1.3; margin-bottom: 0; margin-left: 15px; font-weight: 800;">Etapa</h3>
+								</div>
+								<p>Análise dos novos dados obtidos após as implementações.</p>
+							</div>
+							<div class="col-lg-3 col-md-4 mt-5">
+								<div class="feature-text" style="display: flex; align-items: center; border-bottom: 1px dashed rgba(0, 0, 0, 0.15); padding-bottom: 10px;">
+									<div class="fbox-text color" style="font-size: 58px; line-height: 1; font-weight: 700;">6ª</div>
+									<h3 style="font-size: 22px; line-height: 1.3; margin-bottom: 0; margin-left: 15px; font-weight: 800;">Etapa</h3>
+								</div>
+								<p>Entrega de relatórios e reuniões constantes para discussão e melhoria de resultados para a sua agência.</p>
+							</div>
+						</div>
+
+					</div>
+				</div>
 
 				<div class="section bg-transparent py-4">
 					<div class="container">
