--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -10,7 +10,7 @@
 		<!-- Page Title
 		============================================= -->
 
-		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(254,150,3,0.5), #39384D), url('{% static 'demos/seo/images/about-title.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(73,80,87,0.5), #39384D), url('{% static 'demos/seo/images/services/sobre-top.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 			<div id="particles-line"></div>
 
 			<div class="container clearfix mt-4">
@@ -190,7 +190,7 @@
 					<div class="container">
 						<div class="row col-mb-30 align-content-stretch">
 
-							<div class="col-lg-4 col-md-6 d-flex">
+							<!-- <div class="col-lg-4 col-md-6 d-flex">
 								<a href="{% url 'analise_empresa' %}" class="card h-shadow h-translate-y-sm all-ts">
 									<div class="card-body p-5">
 										<div class="feature-box flex-column">
@@ -211,18 +211,18 @@
 										</div>
 									</div>
 								</a>
-							</div>
+							</div> -->
 
 							<div class="col-lg-4 col-md-6 d-flex">
 								<a href="{% url 'gestao_trafego' %}" class="card h-shadow h-translate-y-sm all-ts">
 									<div class="card-body p-5">
 										<div class="feature-box flex-column">
 											<div class="fbox-image mb-5 text-center">
-												<img height="150" src="{% static 'demos/seo/images/services/content_marketing.svg' %}" alt="Feature Icon">
+												<img height="150" src="{% static 'demos/seo/images/services/content_marketing-pb.svg' %}" alt="Feature Icon">
 											</div>
 											<div class="fbox-content">
-												<h3 class="nott ls0 text-larger">Gestão de Tráfego Pago</h3>
-												<p class="text-smaller">Objectively fashion highly efficient testing off proced through sustainable channels.</p>
+												<h3 class="nott ls0 text-larger">Gestão de Tráfego</h3>
+												<p class="text-smaller">Trazemos os clientes mais qualificados para a sua agência.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Facebook Advertising</li>
@@ -237,15 +237,103 @@
 							</div>
 
 							<div class="col-lg-4 col-md-6 d-flex">
+								<a href="{% url 'otimizacao_seo' %}" class="card h-shadow h-translate-y-sm all-ts">
+									<div class="card-body p-5">
+										<div class="feature-box flex-column">
+											<div class="fbox-image mb-5 text-center">
+												<img height="150" src="{% static 'demos/seo/images/services/seo-pb.svg' %}" alt="Feature Icon">
+											</div>
+											<div class="fbox-content">
+												<h3 class="nott ls0 text-larger">Otimização de SEO</h3>
+												<p class="text-smaller">Fazemos seu site ter mais relevância na página de pesquisa do Google.</p>
+											</div>
+											<ul class="iconlist ms-3 mt-4 mb-0">
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Google Analytics</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Page Analytics</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Page Speed</li>
+											</ul>
+										</div>
+									</div>
+								</a>
+							</div>
+
+							<!-- <div class="col-lg-4 col-md-6 d-flex">
+								<a href="{% url 'criativos' %}" class="card h-shadow h-translate-y-sm all-ts">
+									<div class="card-body p-5">
+										<div class="feature-box flex-column">
+											<div class="fbox-image mb-5 text-center">
+												<img height="150" src="{% static 'demos/seo/images/services/seo.svg' %}" alt="Feature Icon">
+											</div>
+											<div class="fbox-content">
+												<h3 class="nott ls0 text-larger">Criativos</h3>
+												<p class="text-smaller">Objectively fashion highly efficient testing off proced through sustainable channels.</p>
+											</div>
+											<ul class="iconlist ms-3 mt-4 mb-0">
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Google Analytics</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Page Analytics</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Page Speed</li>
+											</ul>
+										</div>
+									</div>
+								</a>
+							</div> -->
+
+							<div class="col-lg-4 col-md-6 d-flex">
+								<a href="{% url 'desenvolvimento_web' %}" class="card h-shadow h-translate-y-sm all-ts">
+									<div class="card-body p-5">
+										<div class="feature-box flex-column">
+											<div class="fbox-image mb-5 text-center">
+												<img height="150" src="{% static 'demos/seo/images/services/ads-pb.svg' %}" alt="Feature Icon">
+											</div>
+											<div class="fbox-content">
+												<h3 class="nott ls0 text-larger">Criação de Website</h3>
+												<p class="text-smaller">Desenvolvemos utiliando as melhores ferramentas um site moderno e otimizado para responder bem em todos os dispositivos.</p>
+											</div>
+											<ul class="iconlist ms-3 mt-4 mb-0">
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Orginality</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Quality</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Readability</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Keyword Density</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Grammer &amp; Spelling</li>
+											</ul>
+										</div>
+									</div>
+								</a>
+							</div>
+
+							<div class="col-lg-6 col-md-6 d-flex">
+								<a href="{% url 'google_meunegocio' %}" class="card h-shadow h-translate-y-sm all-ts">
+									<div class="card-body p-5">
+										<div class="feature-box flex-column">
+											<div class="fbox-image mb-5 text-center">
+												<img height="150" src="{% static 'demos/seo/images/services/experience-pb.svg' %}" alt="Feature Icon">
+											</div>
+											<div class="fbox-content">
+												<h3 class="nott ls0 text-larger">Google Meu Negócio</h3>
+												<p class="text-smaller">Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes.</p>
+											</div>
+											<ul class="iconlist ms-3 mt-4 mb-0">
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> UI/UX Design</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Speed Optimized</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Graphics Banner</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Advertisement</li>
+											</ul>
+										</div>
+									</div>
+								</a>
+							</div>
+
+							<div class="col-lg-6 col-md-12 d-flex">
 								<a href="{% url 'identidade_visual' %}" class="card h-shadow h-translate-y-sm all-ts">
 									<div class="card-body p-5">
 										<div class="feature-box flex-column">
 											<div class="fbox-image mb-5 text-center">
-												<img height="150" src="{% static 'demos/seo/images/services/adwords.svg' %}" alt="Feature Icon">
+												<img height="150" src="{% static 'demos/seo/images/services/criativos-pb.svg' %}" alt="Feature Icon">
 											</div>
 											<div class="fbox-content">
-												<h3 class="nott ls0 text-larger">Identidade Visual</h3>
-												<p class="text-smaller">Objectively fashion highly efficient testing off proced through sustainable channels.</p>
+												<h3 class="nott ls0 text-larger">Identidade Visual & Logomarca</h3>
+												<p class="text-smaller">Entregamos uma identidade visual que condiga com os serviços prestados pela sua agência.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Google Search</li>
@@ -260,51 +348,7 @@
 								</a>
 							</div>
 
-							<div class="col-lg-4 col-md-6 d-flex">
-								<a href="{% url 'criativos' %}" class="card h-shadow h-translate-y-sm all-ts">
-									<div class="card-body p-5">
-										<div class="feature-box flex-column">
-											<div class="fbox-image mb-5 text-center">
-												<img height="150" src="{% static 'demos/seo/images/services/criativos.svg' %}" alt="Feature Icon">
-											</div>
-											<div class="fbox-content">
-												<h3 class="nott ls0 text-larger">Criativos</h3>
-												<p class="text-smaller">Objectively fashion highly efficient testing off proced through sustainable channels.</p>
-											</div>
-											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Google Analytics</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Page Analytics</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Page Speed</li>
-											</ul>
-										</div>
-									</div>
-								</a>
-							</div>
-
-							<div class="col-lg-4 col-md-6 d-flex">
-								<a href="{% url 'desenvolvimento_web' %}" class="card h-shadow h-translate-y-sm all-ts">
-									<div class="card-body p-5">
-										<div class="feature-box flex-column">
-											<div class="fbox-image mb-5 text-center">
-												<img height="150" src="{% static 'demos/seo/images/services/seo.svg' %}" alt="Feature Icon">
-											</div>
-											<div class="fbox-content">
-												<h3 class="nott ls0 text-larger">Desenvolvimento WEB</h3>
-												<p class="text-smaller">Objectively fashion highly efficient testing off proced through sustainable channels.</p>
-											</div>
-											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Orginality</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Quality</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Readability</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Keyword Density</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Grammer &amp; Spelling</li>
-											</ul>
-										</div>
-									</div>
-								</a>
-							</div>
-
-							<div class="col-lg-4 col-md-6 d-flex">
+							<!-- <div class="col-lg-4 col-md-6 d-flex">
 								<a href="{% url 'posts' %}" class="card h-shadow h-translate-y-sm all-ts">
 									<div class="card-body p-5">
 										<div class="feature-box flex-column">
@@ -323,7 +367,7 @@
 										</div>
 									</div>
 								</a>
-							</div>
+							</div> -->
 
 						</div>
 					</div>
